Troubleshooting java issues